# ai-papers-digest

./: .gitignore  .gitleaks.toml  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.docs/: github-workflows.md
.githooks/: pre-commit
.github/workflows/: ci.yml  deploy.yml
.steering/20260327-initial-implementation/: design.md  requirements.md  tasklist.md
.steering/20260329-phase2-feedback/: design.md  requirements.md  tasklist.md
.steering/20260330-phase3-dashboard-vectors/: design.md  requirements.md  tasklist.md
.steering/20260404-feedback-learning-fix/: design.md  requirements.md  tasklist.md
docs/: architecture.md  development-guidelines.md  functional-design.md  glossary.md  product-requirements.md  repository-structure.md  secrets-setup.md
src/lambdas/collector/: arxiv_client.py  handler.py  hf_client.py  paper_merger.py  requirements.txt  s2_client.py
src/lambdas/deliverer/: handler.py  message_builder.py  requirements.txt  slack_client.py
src/lambdas/feedback/: handler.py  reaction_parser.py  requirements.txt  slack_verifier.py
src/lambdas/layer/: build.sh
src/lambdas/scorer/: filter.py  handler.py  requirements.txt  scoring.py
src/shared/: constants.py  pipeline_runs.py
src/summarizer/: Dockerfile  buildspec.yml  entrypoint.sh  package-lock.json  package.json
static/: dashboard.js  search.js  style.css
static/auth/: auth-helpers.js  callback.html  callback.js  config.js  login.html  login.js  logout.html  logout.js
terraform/: bootstrap.sh
tests/fixtures/: hf_daily_papers.json  s2_batch_response.json
(+71 files in other folders)
